Actions
Bug #17757
closedHash#slice does not keep compare_by_identity on the results
Bug #17757:
Hash#slice does not keep compare_by_identity on the results
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 3.0.0p0 (2020-12-25 revision 95aff21468) [x86_64-darwin20]
Description
GH-PR: https://github.com/ruby/ruby/pull/4330
str1 = +'str'
str2 = +'str'
hash = {a: :a, b: :b, c: :c}.compare_by_identity
hash[str1] = 1
hash[str2] = 2
p hash.values_at(str1, str2) #=> [1, 2]
p hash.except.compare_by_identity? #=> true
p hash.slice.compare_by_identity? #=> false
p hash.except(str1, str2) #=> {:a=>:a, :b=>:b, :c=>:c}
p hash.slice(str1, str2) #=> {"str"=>2}
Is this an intentional behavior?
I would expect Hash#slice keeps compare_by_identity behaviors.
Actions